# mojos_api_madhouse

./: Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
benches/: animechan.rs
src/: anime.rs  lib.rs  memes.rs  structs.rs
tests/: animechan.rs  owen_wilson_wow
